--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Curso de git desde cero">
   <title>Curso de Git desde cero</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   <h1>Curso de Git desde cero Pildoras Informaticas</h1>
